[gd_scene load_steps=5 format=3 uid="uid://8kkcuyw441ns"]

[ext_resource type="Theme" uid="uid://bcy08y4x4a7v" path="res://themes/popup_theme.tres" id="1_abcde"]
[ext_resource type="Script" uid="uid://ctgo253n0q1wb" path="res://scripts/views/ClickerPopup.gd" id="2_abcde"]
[ext_resource type="Texture2D" uid="uid://duau5nvw76sb4" path="res://artdleAsset/animated/animated_inspiration_12.png" id="3_gxb5b"]
[ext_resource type="AudioStream" uid="uid://2n3ak2uejqjr" path="res://artdleAsset/music/currency_click.mp3" id="4_f85xh"]

[node name="ClickerPopup" type="PopupPanel"]
title = "Clicker"
initial_position = 2
size = Vector2i(300, 400)
visible = true
theme = ExtResource("1_abcde")
script = ExtResource("2_abcde")
inspiration_spritesheet = ExtResource("3_gxb5b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = 295.0
offset_bottom = 395.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClickPowerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Click Power: 1"

[node name="AutoclickSpeedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Autoclick Speed: 0"

[node name="ClickButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Click Me!"

[node name="UpgradeClickPowerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Upgrade Click Power (10 Gold)"

[node name="UpgradeAutoclickSpeedButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Upgrade Autoclick Speed (50 Gold)"

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_f85xh")
